# avitoapi

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.plans/avito-codegen/: 00-overview.md
.plans/avito-sdk-framework/: 00-audit.md  00-decisions.md  00-improvements.md  00-overview.md  00-waves.md  05-risks.md  wave-01-skeleton.md  wave-02-items-pagination-storage.md  wave-03-messenger-fsm-assets.md  wave-04-dispatcher-webhook-release.md  wave-05-orders-reviews-promotion-cpa.md  wave-06-autoload-job-realty-autoteka.md
.plans/pipeline-saga-v2/: 00-overview.md  02-flow.md
avitoapi/: _MODULE.md  _MODULE_AUTO.md  __init__.py  categories.py  client.py  config.py  dispatcher.py  exceptions.py  filters.py  logging.py  persistent_queue.py  polling.py  types.py
avitoapi/assets/: _MODULE.md  _MODULE_AUTO.md  __init__.py  downloader.py  file_cache.py
avitoapi/auth/: _MODULE.md  _MODULE_AUTO.md  __init__.py  oauth.py
avitoapi/breaker/: _MODULE.md  _MODULE_AUTO.md  __init__.py  registry.py
avitoapi/channels/: _MODULE_AUTO.md  __init__.py  _base.py  memory.py  registry.py
avitoapi/codegen/: _MODULE_AUTO.md  __init__.py  __main__.py  build.py  config.py  dedup.py  emit_facade.py  emit_methods.py  emit_models.py  entities.py  fetch.py  generate.py  naming.py  parser.py  spec.py  types.py
avitoapi/enums/: _MODULE_AUTO.md  __init__.py  accounts_hierarchy.py  ads.py  auction.py  auth.py  autoload.py  autostrategy.py  autoteka.py  avito_promo.py  calltracking.py  cpa.py  cpxpromo.py  delivery.py  items.py  job.py  messenger.py  order_management.py  promotion.py  realty_reports.py  reviews.py  short_term_rental.py  special_offers.py  stock_management.py  tariff.py  trxpromo.py  user.py
avitoapi/events/: _MODULE.md  _MODULE_AUTO.md  __init__.py  _base.py  autoload.py  balance.py  calltracking.py  delivery.py  items.py  lifecycle.py  messenger.py  orders.py  reviews.py
avitoapi/facade/: _base.py  accounts_hierarchy.py  ads.py  auction.py  auth.py  autoload.py  autostrategy.py  autoteka.py  avito_promo.py  calltracking.py  cpa.py  cpxpromo.py  delivery.py  items.py  job.py  messenger.py  order_management.py  promotion.py  realty_reports.py  reviews.py  short_term_rental.py  special_offers.py  stock_management.py  tariff.py  trxpromo.py  user.py
avitoapi/fanout/: _MODULE_AUTO.md  __init__.py  hub.py  source.py  supervision.py
avitoapi/fsm/: _MODULE.md  _MODULE_AUTO.md  __init__.py  _fallback.py  key_builder.py
avitoapi/idempotency/: _MODULE_AUTO.md  __init__.py  filter.py  store.py
avitoapi/methods/: _MODULE.md  _MODULE_AUTO.md  __init__.py  _base.py  accounts.py  accounts_hierarchy.py  ads.py  auction.py  auth.py  autoload.py  autostrategy.py  autoteka.py  avito_promo.py  balance.py  calltracking.py  cpa.py  cpxpromo.py  delivery.py  items.py  job.py  messenger.py  order_management.py  orders.py  promotion.py  realty.py  realty_reports.py  reviews.py  short_term_rental.py  special_offers.py  stats.py  stock_management.py  tariff.py  trxpromo.py  user.py
avitoapi/models/: _MODULE.md  _MODULE_AUTO.md  __init__.py  _base.py  _helpers.py  _shared.py  accounts.py  accounts_hierarchy.py  ads.py  auction.py  auth.py  autoload.py  autostrategy.py  autoteka.py  avito_promo.py  balance.py  calltracking.py  common.py  cpa.py  cpxpromo.py  delivery.py  items.py  job.py  messenger.py  order_management.py  orders.py  promotion.py  realty.py  realty_reports.py  reviews.py  short_term_rental.py  special_offers.py  stats.py  stock_management.py  tariff.py  user.py  (+1 more)
docs/: api-surface.md
examples/: echo_bot.py
examples/echo_bot/: .env.example  README.md  pyproject.toml
examples/echo_bot/echo_bot/: __init__.py  __main__.py  dispatcher_factory.py  healthz.py  main.py
examples/echo_bot/scripts/: healthcheck.sh  run.sh
scripts/: lint.sh  test.sh
tests/: _MODULE_AUTO.md  _fake_session.py  conftest.py
(+289 files in other folders)
