[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "avitoapi-echo-bot"
version = "0.1.0"
description = "Reference multi-account Avito bot using the avitoapi SDK."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "zlexdev" }]

dependencies = [
    "avitoapi",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "structlog>=24",
]

[project.optional-dependencies]
evented = [
    "evented",
]

[tool.hatch.build.targets.wheel]
packages = ["echo_bot"]

[tool.hatch.metadata]
allow-direct-references = true
